--- a/BlinkIDSample/settings.gradle
+++ b/BlinkIDSample/settings.gradle
@@ -1,3 +1,3 @@
-include ':BlinkID_AllRecognizersSample', ':BlinkID-CustomUISample', ':BlinkID-DirectApiSample', ':BlinkID-CustomFieldByFieldScanSample', ':LibUtils', ':BlinkID-DetectorSample', ':BlinkID-ImagesSample', ':BlinkID-CustomCombinedSample', ':BlinkID-TemplatingSample', ':BlinkID-aMinimalSample'
+include ':BlinkID_AllRecognizersSample', ':BlinkID-CustomUISample', ':BlinkID-DirectApiSample', ':BlinkID-CustomFieldByFieldScanSample', ':LibUtils', ':BlinkID-DetectorSample', ':BlinkID-ImagesSample', ':BlinkID-CustomCombinedSample', ':BlinkID-TemplatingSample', ':BlinkID-aMinimalSample', ':BlinkID_OverlaySample'
 // uncomment this line if you have customised build of LibBLinkID
 //include ':LibBlinkID'
